# QLegacyStyle

./: .gitignore  CMakeLists.txt  Makefile  Q5LegacyStyle.kdev4  QLegacyStyle.kdev4  README  README.md
.kdev4/: Q5LegacyStyle.kdev4
src/: bitmaps.h  drawutil.cpp  drawutil.h  main.cpp  q5legacystyle.cpp  q5legacystyle.h  q5legacystyle.ui  qlegacystyle.cpp  qlegacystyle.h  qlegacystyle.json  qlegacystyleplugin.cpp  qlegacystyleplugin.h  widgetgallery.cpp  widgetgallery.h
